# terminal

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE  README.md  install.sh  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: python-ci.yaml  rust-ci.yml
backend/: .env.example  CLAUDE.md  main.py  pyproject.toml
backend/.claude/: settings.local.json
backend/.devcontainer/: devcontainer.json
backend/src/api/: __init__.py  auth.py  config.py  main.py  models.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth_routes.py  test_langgraph_routes.py  test_main.py
backend/tests/unit/: test_auth.py  test_config.py  test_models.py
crates/shared/src/: events.rs  lib.rs
docs/: GETTING_STARTED.md  architecture.md  arena-mode.md  design-patterns.md  incident-investigation.md  pty-backends.md
docs/legacy/plans/: 2026-03-09-shared-test-container-design.md
docs/plans/: 2026-03-09-shared-test-container-design.md  2026-03-09-shared-test-container-plan.md
docs/superpowers/plans/: 2026-03-13-plan-and-execute.md
docs/superpowers/specs/: 2026-03-13-plan-and-execute-design.md
examples/: wip.md
src/: app.rs  args.rs  engine.rs  main.rs  pty.rs
src/app/: llm_controller.rs  session_manager.rs  state.rs
src/executor/: command.rs  facade.rs  install.rs  mod.rs  package_manager.rs
src/llm/: client.rs  renderer.rs
src/orchestrators/: command.rs  natural_language.rs  tab_completion.rs
src/pty/: adapters.rs  docker.rs  io.rs  manager.rs
src/pty/adapters/: arena.rs  test_container.rs
src/pty/docker/: container.rs  exec_session.rs  shared.rs
src/terminal/: state.rs  tui.rs
src/utils/: ansi.rs
terminal-app/: .env  .gitignore  CLAUDE.md  Cargo.toml  README.md
terminal-app/.claude/agents/: code-metrics-analyzer.md
terminal-app/.github/workflows/: ci.yml
terminal-app/benches/: scan_benchmark.rs
terminal-app/docs/: CODE_METRICS_REPORT.md  INDEX.md  SCAN.docx  SCAN_ARCHITECTURE.md  SCAN_IMPLEMENTATION_PLAN.md
terminal-app/docs/design-patterns/: chain-of-responsibility.md
terminal-app/docs/uml/: 00-main-application-architecture.puml  01-architecture-overview.puml  02-scan-algorithm.puml  03-executor-module.puml  04-input-module-detailed.puml  05-orchestrators.puml  06-llm-integration.puml  07-complete-system-class-diagram.puml  08-job-manager-class-diagram.puml  09-background-command-execution-sequence.puml  10-executor-module-with-background-support.puml  11-main-event-loop-with-job-checking.puml  12-lock-poisoning-failfast-pattern.puml  (+8 more)
terminal-app/src/: app.rs  config.rs  engine.rs  lib.rs  logging.rs  main.rs  session.rs  state.rs
terminal-app/tests/: classifier_tests.rs  executor_tests.rs  integration_tests.rs  interactive_command_test.rs  terminal_state_tests.rs
(+80 files in other folders)
