[package]
name = "infraware-terminal"
version = "0.2.0"
edition = "2024"
authors = ["Infraware S.R.L. <info@infraware.it>"]
description = "AI-powered terminal emulator with an integrated LLM agent for DevOps assistance"
license = "Apache-2.0"
repository = "https://github.com/Infraware-dev/infraware-terminal"
homepage = "https://github.com/Infraware-dev/infraware-terminal"
readme = "README.md"
rust-version = "1.88.0"
keywords = ["terminal", "ai", "devops", "llm", "emulator"]
categories = ["command-line-utilities", "development-tools"]

[features]
arena = ["docker"]
default = ["rig"]
docker = ["dep:bollard"]
pty-test_container = ["docker"]
rig = ["dep:chrono", "dep:rig-core", "dep:schemars"]

[dependencies]
anyhow = "1"
arboard = "3"
async-stream = "0.3"
async-trait = "0.1"
bitflags = "2"
bollard = { version = "0.20", optional = true, default-features = false, features = ["pipe"] }
chrono = { version = "0.4", optional = true, features = ["serde"] }
clap = { version = "4", default-features = false, features = ["derive", "env", "help", "std"] }
ctrlc = "3"
dotenvy = "0.15"
eframe = { version = "0.33", default-features = false, features = [
  "default_fonts",
  "glow",
  "x11",
] }
egui = "0.33"
egui_tiles = "0.14"
futures = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }
mimalloc = "0.1"
once_cell = "1"
portable-pty = "0.9"
regex = "1"
rig-core = { version = "0.31", optional = true }
schemars = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1"
syntect = { version = "5", features = ["default-fancy"] }
thiserror = "1"
tokio = { version = "1", features = [
  "io-util",
  "macros",
  "process",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
vte = "0.15"
which = "8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.29", features = ["process", "signal"] }

[dev-dependencies]
tempfile = "3"

[lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "forbid"
unused_lifetimes = "warn"

[lints.clippy]
all = "warn"
complexity = "warn"
correctness = "warn"
perf = "warn"
style = "warn"
suspicious = "warn"
mod_module_files = "warn"

# Optimize dev builds for acceptable frame rates in GUI applications.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[profile.release]
strip = true
lto = true
codegen-units = 1
